@@ -1,48 +1,40 @@
-<form method="post" flexy:ignore>
-<input type="hidden" name="action" value="insert" />
-<div class="pageTitle">{translate(pageTitle)}</div>
+<h1 class="pageTitle">{translate(pageTitle)}</h1>
 <span flexy:if="msgGet()">{msgGet()}</span>
 
-<table class="wide">
-    <tr>
-        <td align="center">
-            <table>
-                <tr>
-                    <th align="left">{translate(#Name#)}: </th>
-                    <td>
-                        <div class="error" flexy:if="error[name]">
-                            {translate(error[name])}
-                        </div>
-                        <input class="full" type="text" name="guestbook[name]" value="{guestbook.question}" /></input>
-                    </td>
-                </tr>
-                <tr>
-                    <th align="left">{translate(#E-Mail#)}: </th>
-                    <td>
-                        <div class="error" flexy:if="error[email]">
-                            {translate(error[email])}
-                        </div>
-                        <input class="full" type="text" name="guestbook[email]" value="{guestbook.email}" /></input>
-                    </td>
-                </tr>
-                <tr>
-                    <th align="left">{translate(#Message#)}: </th>
-                    <td>
-                        <div class="error" flexy:if="error[message]">
-                            {translate(error[message])}
-                        </div>
-                        <textarea cols="40" rows="7" name="guestbook[message]">{guestbook.message}</textarea>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2" align="center">
-                        <input class="wideButton" type="submit" name="submitted" value="{translate(#Add#)}" />&nbsp;
-                        <input class="wideButton" type="button" name="cancel" value="{translate(#Cancel#)}" 
-                            onClick="document.location.href='{makeUrl(##,#guestbook#)}'" />
-                    </td>
-                </tr>
-            </table>
-        </td>
-    </tr>
-</table>
+<form method="post" flexy:ignore>
+    <input type="hidden" name="action" value="insert" />
+    <table class="wide"><tr>
+    <td align="center">
+        <table>
+            <tr>
+                <th align="left">{translate(#Name#)}:</th>
+                <td>
+                    <div class="error" flexy:if="error[name]">{translate(error[name])}</div>
+                    <input class="full" type="text" name="guestbook[name]" value="{guestbook.name}" />
+                </td>
+            </tr>
+            <tr>
+                <th align="left">{translate(#Email#)}:</th>
+                <td>
+                    <div class="error" flexy:if="error[email]">{translate(error[email])}</div>
+                    <input class="full" type="text" name="guestbook[email]" value="{guestbook.email}" />
+                </td>
+            </tr>
+            <tr>
+                <th align="left">{translate(#Message#)}:</th>
+                <td>
+                    <div class="error" flexy:if="error[message]">{translate(error[message])}</div>
+                    <textarea cols="40" rows="7" name="guestbook[message]">{guestbook.message}</textarea>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" align="center">
+                    <input class="wideButton" type="submit" name="submitted" value="{translate(#Add#)}" />
+                    <input class="wideButton" type="button" name="cancel" value="{translate(#Cancel#)}" 
+                        onClick="document.location.href='{makeUrl(##,#guestbook#)}'" />
+                </td>
+            </tr>
+        </table>
+    </td>
+    </tr></table>
 </form>
